# autorelease

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  appveyor.yml  autorelease-azure.yml  autorelease-env.sh  autorelease-local.yml  autorelease-stages.yml  autorelease-travis.yml  azure-pipelines.yml  release_check.py  requirements.txt  setup.cfg  setup.py  test-conditions.yml
.autorelease/: autorelease.yml  test-testpypi
.github/workflows/: autorelease-default-env.sh  autorelease-deploy.yml  autorelease-gh-rel.yml  autorelease-prep.yml  autorelease-tests.yml  unit-tests.yml
autorelease/: __init__.py  _version.py  check_runners.py  git_repo_checks.py  github_release.py  release_notes.py  root_dir_checks.py  script_utils.py  utils.py  version.py  version_checks.py
autorelease/gh_actions_stages/: autorelease-default-env.sh  autorelease-deploy.yml  autorelease-gh-rel.yml  autorelease-prep.yml
autorelease/gh_api4/: notes4.py  pull_requests.py  query_runner.py  releases.py  utils.py
autorelease/scripts/: authenticate.py  autorelease-checks  autorelease-release  bump_dev_version.py  check.py  cli.py  release.py  vendor.py  write_release_notes.py
autorelease/shell/: pypi_upload.py  pypi_upload.sh  testpypi_install.sh  wait-for-testpypi
autorelease/tests/: test_bump_dev_version.py  test_check_runners.py  test_version.py
azure_stages/: cut_release.yml  deploy_pypi.yml  deploy_testpypi.yml
deprecated/: autorelease-travis.yml
deprecated/azure_stages/: deploy_testpypi.yml
deprecated/travis_stages/: cut_release.yml  deploy_testpypi.yml
devtools/conda-recipe/: meta.yaml
docs/: Makefile  conf.py  index.rst  make.bat  philosophy.rst
script_stages/: deploy-pypi  install-testpypi  test-testpypi
travis_stages/: cut_release.yml  deploy_pypi.yml  deploy_testpypi.yml  test_testpypi.yml
