[metadata]
name = autorelease
version = 0.0.15.dev0
# version should end in .dev0 if this isn't to be released
short_description = Tools to keep the release process clean.
description = file: README.md
description_content_type = text/markdown
license = MIT
url = "http://github.com/dwhswenson/autorelease"
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Testing

[options]
install_requires =
    packaging
    pyyaml
    gitpython
    future
    requests
packages = find:
scripts = ['autorelease/shell/wait-for-testpypi']

[options.entry_points]
console_scripts = 
    autorelease-release = autorelease.scripts.release:main
    write-release-notes = autorelease.scripts.write_release_notes:main
    bump-dev-version = autorelease.scripts.bump_dev_version:main

[bdist_wheel]
universal=1
