[metadata]
name = autorelease
version = 0.0.18
# version should end in .dev0 if this isn't to be released
short_description = Tools to keep the release process clean.
description = Tools to keep the release process clean.
long_description = file: README.md
long_description_content_type = text/markdown
author = David W.H. Swenson
author_email = dwhs@hyperblazer.net
license = MIT
url = https://github.com/dwhswenson/autorelease
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Testing

[options]
install_requires =
    packaging
    pyyaml
    gitpython
    future
    requests
    python-dateutil
packages = find:

[options.entry_points]
console_scripts = 
    autorelease-release = autorelease.scripts.release:main
    write-release-notes = autorelease.scripts.write_release_notes:main
    bump-dev-version = autorelease.scripts.bump_dev_version:main
    pypi-max-version = autorelease.scripts.bump_dev_version:get_max
    wait-for-testpypi = autorelease.scripts.bump_dev_version:wait_for_max

[bdist_wheel]
universal=1
